The wraping problem have been solved

--- a/src/components/EditableInput/EditableInput.module.scss
+++ b/src/components/EditableInput/EditableInput.module.scss
@@ -29,6 +29,9 @@
   margin-bottom: 100px;
   letter-spacing: unset;
   color: white;
+  width: 100%;
+  word-wrap: break-word;
+  padding: 0px 20px;
 }
 .TitleOutro5 {
   font-size: 50px;
@@ -38,6 +41,9 @@
   margin-bottom: 100px;
   letter-spacing: unset;
   color: orangered;
+  width: 100%;
+  word-wrap: break-word;
+  padding: 0px 20px;
 }
 .SubTitle5 {
   font-size: 45px;
@@ -159,6 +165,9 @@
 .FreeText {
   font-family: "Julius Sans", sans-serif;
   font-size: 45px;
+  width: 100%;
+  word-wrap: break-word;
+  padding: 0px 20px;
 }
 
 .InlinePrimaryTitle9 {
@@ -235,6 +244,9 @@
   text-transform: uppercase;
   color: orangered;
   font-weight: 800;
+  width: 100%;
+  word-wrap: break-word;
+  padding: 0px 20px;
 }
 .Trait5 {
   font-size: 28px;
