--- a/src/containers/VideoBuilderSteps/Custom/Custom5/Custom5.module.css
+++ b/src/containers/VideoBuilderSteps/Custom/Custom5/Custom5.module.css
@@ -7,19 +7,18 @@
   height: 100%;
 }
 .TitleWrapper5 {
-  padding: 10px;
   position: absolute;
   bottom: 0;
   left: 0;
   width: 26%;
-  height: 26%;
+  height: 20%;
   font-size: 65px;
   color: orange;
   text-align: center;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
+
 }
 
 .StepTitle {
