--- a/src/containers/VideoBuilderSteps/Outro/Outro5/Outro5.module.css
+++ b/src/containers/VideoBuilderSteps/Outro/Outro5/Outro5.module.css
@@ -36,5 +36,5 @@
 .StepTitle5 {
   font-size: 75px;
   font-family: "Julius Sans", sans-serif;
- 
+  width: 48% !important;
 }
